crates/nash-report/tests/can/snapshots/can__pattern__tests__duplicate_across_sibling_patterns.snap
---
source: crates/nash-can/src/pattern.rs
description: "module Main exposing (..)\nf = \\x x -> x\n"
info: diagnostic
---
nash::names::duplicate_pattern

  × This anonymous function has multiple `x` arguments.
   ╭─[src/Main.nash:2:8]
 1 │ module Main exposing (..)
 2 │ f = \x x -> x
   ·      ┬ ┬
   ·      │ ╰── and another first definition
   ·      ╰── first definition
   ╰────
  help: Rename one of the definitions.
