crates/nash-report/tests/can/snapshots/can__pattern__tests__literal_str.snap
---
source: crates/nash-can/src/pattern.rs
description: "\"hello\""
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: Str(
            "hello",
        ),
    },
    {},
)
